--- a/.github/workflows/assign_project.yml
+++ b/.github/workflows/assign_project.yml
@@ -1,23 +1,18 @@
-name: Auto Assign to Project(s)
+name: Adds all issues that don't include the 'x' labels to project board
 
 on:
   issues:
-    types: [opened, labeled]
-  pull_request_target:
-    types: [opened, labeled]
-  issue_comment:
-    types: [created]
-env:
-  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+    types:
+      - opened
 
 jobs:
-  assign_one_project:
+  add-to-project:
+    name: Add issue to project
     runs-on: ubuntu-latest
-    name: Assign to One Project
     steps:
-    - name: Assign NEW issues and NEW pull requests to project 3
-      uses: srggrs/assign-one-project-github-action@1.2.1
-      if: github.event.action == 'opened'
-      with:
-        project: 'https://github.com/orgs/himalayan-green/projects/3'
-
+      - uses: actions/add-to-project@main
+        with:
+          project-url: https://github.com/orgs/himalayan-green/projects/3
+          github-token: ${{ secrets.ADD_ISSUE_TO_PROJECT }}
+          labeled: x, 
+          label-operator: NOT
