--- a/.github/workflows/assign_project.yml
+++ b/.github/workflows/assign_project.yml
@@ -1,4 +1,4 @@
-name: Adds all issues that don't include the 'x' labels to project board
+name: Adds all issues project board 3
 
 on:
   issues:
@@ -14,5 +14,3 @@ jobs:
         with:
           project-url: https://github.com/orgs/himalayan-green/projects/3
           github-token: ${{ secrets.ADD_ISSUE_TO_PROJECT }}
-          labeled: x, 
-          label-operator: NOT
